// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbBar rendering renders breadcrumb-bar 1`] = `
<div
  className="breadcrumb-bar"
>
  <Breadcrumb
    isTitle={false}
    items={
      Array [
        Object {
          "caption": "root",
          "url": "/some-url",
        },
        Object {
          "caption": "child",
        },
      ]
    }
    title={true}
  />
  <hr
    className="breadcrumb-line"
  />
</div>
`;

exports[`BreadcrumbBar rendering renders switchable breadcrumb-bar 1`] = `
<div
  className="breadcrumb-bar"
>
  <Breadcrumb
    isTitle={false}
    items={
      Array [
        Object {
          "caption": "root",
          "url": "/some-url",
        },
        Object {
          "caption": "child",
        },
      ]
    }
    title={true}
  >
    <BreadcrumbSwitcher
      currentPage={null}
      hasError={false}
      isLoadingResources={false}
      onHide={[Function]}
      onNextPageClick={[Function]}
      onOpen={[Function]}
      onPrevPageClick={[Function]}
      onResourceClick={[Function]}
      onTogglerClick={[Function]}
      open={false}
      resources={Array []}
      totalPages={1}
    />
  </Breadcrumb>
  <hr
    className="breadcrumb-line"
  />
</div>
`;

exports[`loadSwitcherResourcesByResource calls 1`] = `
Array [
  Array [
    Object {
      "nameField": "name",
      "resourceUrl": "some/url",
      "switcherItemUrl": "some/url/:id",
    },
  ],
  Array [
    Object {
      "nameField": "name",
      "resourceUrl": "some/url",
      "switcherItemUrl": "some/url/:id",
    },
    Object {
      "page": 3,
    },
  ],
  Array [
    Object {
      "nameField": "name",
      "resourceUrl": "some/url",
      "switcherItemUrl": "some/url/:id",
    },
    Object {
      "page": 1,
    },
  ],
]
`;
